# LitGB

./: .gitignore  4robots.md  README.md  app.py  pyproject.toml  requirements.txt  run_app.bat  run_app.sh  run_tests.py  test_app.py  test_spr_png_to_gbstudio_anim.py  test_spr_png_to_gbstudio_anim_o1.py  test_spr_rgb_to_3color_layers.py
algorithms/: __init__.py  _spr_png_to_gbstudio_anim_o1.py  spr_png_to_gbstudio_anim.py  spr_rgb_to_3color_layers.py  tile_deduplication.py
input/test/project/sprites/: chicken_fighter_full.gbsres
misc/: __init__.py  string_lib.py
